
name:                                       pcotesthaskell
version:                                    0.1.0.0
license:                                    MIT
license-file:                               LICENSE
build-type:                                 Simple
cabal-version:                              >= 1.10
extra-source-files:                         README.md

source-repository head
  type:                                     git
  location:                                 

library
  hs-source-dirs:     src
  exposed-modules:    Model, ModelVolley, View
  default-language:   Haskell2010
  build-depends:      base, lucid, mtl, scotty, postgresql-simple, 
                      text, wai-extra, bytestring

executable pcotesthaskell
  default-language:                         Haskell2010
  hs-source-dirs:                           app
  main-is:                                  Main.hs
  ghc-options:                              -threaded
                                            -rtsopts
                                            -with-rtsopts=-N
                                            -W
                                            -Wall
                                            -Werror=incomplete-patterns
                                            -Werror=missing-methods
                                            -fwarn-unused-imports
  build-depends:                          pcotesthaskell  
                                          , base >= 4.7 && < 5
                                          , bytestring
                                          , mtl
                                          , postgresql-simple 
                                          , scotty
                                          , text
                                          , lucid
                                          , wai-extra